fix image layout shift

--- a/src/routes/post/[...id]/markdown.module.css
+++ b/src/routes/post/[...id]/markdown.module.css
@@ -44,6 +44,12 @@ td {
 .markdown figure img {
   margin: 0.5rem;
   width: calc(100% - 1rem);
+  height: auto;
+}
+
+.markdown figure picture {
+  width: calc(100% - 1rem);
+  height: auto;
 }
 
 .markdown figure {
